# parallel-vala

./: README.md  meson.build  parallel-vala.wrap
examples/: fibonacci.vala  filter-images.vala
src/: parallel.vala
